Samba: Ensure to differenciate mounts sharing the same source

Summary:
`getmntent` for samba returns fsname of the form "//server/folder" (same as `mount`)
It is not sufficient to use in udi as device name as it does not differenciate mounts sharing the same source but having different mount points.

BUG: 418906
FIXED-IN: 5.69

Test Plan:
With a local cifs mount point:

Before
$ solid-hardware5 list | grep ourfiles
udi = '/org/kde/fstab///meven-synapse/ourfiles'

After
$ solid-hardware5 list | grep ourfiles
udi = '/org/kde/fstab///meven-synapse/ourfiles:/media/samba'

Reviewers: #frameworks, sitter

Reviewed By: sitter

Subscribers: ahmadsamir, anthonyfieroni, sitter, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D28476