src/solid/devices/backends/fstab/fstabhandling.cpp
@@ -124,6 +124,10 @@ QString _k_deviceNameForMountpoint(const QString &source, const QString &fstype,
     if (fstype.startsWith("fuse.") ||
         fstype == QLatin1String("overlay")) {
             return fstype + mountpoint;
+    } else if (fstype == QLatin1String("cifs")) {
+        // append mountpoint to samba device name as they don't contain it in getmntent return
+        // and this is needed to differentiate different mounts with same source
+        return source + QLatin1Char(':') + mountpoint;
     }
     return source;
 }
